Add the entities

--- a/CampingAR/CampingAR/ARModels/campfire_1.rcproject/com.apple.RCFoundation.Project
+++ b/CampingAR/CampingAR/ARModels/campfire_1.rcproject/com.apple.RCFoundation.Project
@@ -105,6 +105,13 @@
                           }
                         ],
                         [
+                          "entityName",
+                          {
+                            "typeName" : "String",
+                            "value" : "campfire"
+                          }
+                        ],
+                        [
                           "rigidBody-enabled",
                           {
                             "typeName" : "Bool",
