Updated some models

--- a/CampingAR/CampingAR/ARModels/table_1.rcproject/com.apple.RCFoundation.Project
+++ b/CampingAR/CampingAR/ARModels/table_1.rcproject/com.apple.RCFoundation.Project
@@ -21,6 +21,7 @@
               "material" : "concrete",
               "overrides" : {
                 "children" : {
+                  "43BADFA1-57F6-4592-9B39-9BFC2F040725" : null,
                   "62222B58-FAF6-4427-AD59-3CF05CFBBD9B" : {
                     "overrides" : {
                       "children" : {
@@ -134,17 +135,17 @@
                     },
                     "transform" : {
                       "matrix" : [
-                        1,
+                        0.40405556559562683,
                         0,
                         0,
                         0,
                         0,
-                        1,
+                        0.40405556559562683,
                         0,
                         0,
                         0,
                         0,
-                        1,
+                        0.40405556559562683,
                         0,
                         0,
                         0.046995040029287338,
@@ -153,6 +154,7 @@
                       ]
                     }
                   },
+                  "D749480E-6724-4ADB-936D-4607DE78172E" : null,
                   "EE9C5853-235D-4CFE-AC4B-8271E5430D14" : null
                 },
                 "factory" : null,
@@ -170,21 +172,21 @@
               "title" : "Scene",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.87083697319030762,
-                  -2.3283064365386963e-10,
-                  -0.4915718138217926,
+                  0.70546907186508179,
+                  -7.4505814851022478e-09,
+                  -0.70874065160751343,
                   0,
-                  -0.12471485137939453,
-                  0.9672812819480896,
-                  -0.22093686461448669,
+                  -0.38332894444465637,
+                  0.84111309051513672,
+                  -0.38155949115753174,
                   0,
-                  0.47548812627792358,
-                  0.25370630621910095,
-                  0.84234434366226196,
+                  0.59613114595413208,
+                  0.5408591628074646,
+                  0.59337937831878662,
                   0,
-                  1.5791835784912109,
-                  0.40800294280052185,
-                  2.484917163848877,
+                  4.2700881958007812,
+                  3.1630911827087402,
+                  3.7259612083435059,
                   1
                 ],
                 "sceneTransform" : [
